[tool.poetry]
name = "nixops_aws"
version = "1.0"
description = "NixOps AWS plugin"
authors = ["adisbladis <adisbladis@gmail.com>"]
license = "LGPL-3.0-only"
include = [ "nixops_aws/nix/*.nix" ]

[tool.poetry.dependencies]
python = "^3.7"
boto = "^2.49.0"
boto3 = "^1.13.7"
nixops = {git = "https://github.com/NixOS/nixops.git", rev = "master"}
boto3-stubs = {extras = ["ec2", "sqs", "efs", "rds"], version = "^1.13.8"}
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
mypy = "^0.770"
black = "^19.10b0"

[tool.poetry.plugins."nixops"]
aws = "nixops_aws.plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
